--- a/cart-test.properties
+++ b/cart-test.properties
@@ -1,7 +1,7 @@
-#²»Í¬ÎÄ¼şÅäÖÃ²»Í¬µÄ»·¾³±äÁ¿£¬²âÊÔ»·¾³
+#ä¸åŒæ–‡ä»¶é…ç½®ä¸åŒçš„ç¯å¢ƒå˜é‡ï¼Œæµ‹è¯•ç¯å¢ƒ
 spring.profiles=test
-#°¢ÀïÁ¬½Ó³ØÅäÖÃ
-#spring.datasource.druid.driver-class-name=oracle.jdbc.driver.OracleDriver  #¿ÉÅä¿É²»Åä£¬°¢ÀïµÄÊı¾İ¿âÁ¬½Ó³Ø»áÍ¨¹ıurl×Ô¶¯ËÑÑ°
+#é˜¿é‡Œè¿æ¥æ± é…ç½®
+#spring.datasource.druid.driver-class-name=oracle.jdbc.driver.OracleDriver  #å¯é…å¯ä¸é…ï¼Œé˜¿é‡Œçš„æ•°æ®åº“è¿æ¥æ± ä¼šé€šè¿‡urlè‡ªåŠ¨æœå¯»
 spring.datasource.druid.url=jdbc:mysql://192.168.1.35:3306/qy107
 spring.datasource.druid.username=root
 spring.datasource.druid.password=123456
@@ -9,11 +9,11 @@ spring.datasource.druid.initial-size=5
 spring.datasource.druid.max-active=20
 spring.datasource.druid.min-idle=10
 spring.datasource.druid.max-wait=10
-#mybatisÉ¨ÃèmapperÎÄ¼şµÄÅäÖÃ
+#mybatisæ‰«æmapperæ–‡ä»¶çš„é…ç½®
 server.port=9999
-#µ±Ç°·şÎñÈ¥×¢²áÖĞĞÄ×¢²áµÄ·şÎñÃû³Æ
+#å½“å‰æœåŠ¡å»æ³¨å†Œä¸­å¿ƒæ³¨å†Œçš„æœåŠ¡åç§°
 spring.application.name=cartmgr
-#×¢²áÖĞĞÄµØÖ·
+#æ³¨å†Œä¸­å¿ƒåœ°å€
 eureka.client.service-url.defaultZone=http://localhost:1114/eureka/
-#¿ªÆôfeignµÄÂ·ÓÉÈÛ¶Ï
+#å¼€å¯feignçš„è·¯ç”±ç†”æ–­
 feign.hystrix.enabled=true
